--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,7 +38,7 @@
             <div class="header-text">
                 <h1 class="heading-2">Hello! <span class="wave">👋🏼</span><br /> I'm <span>Tapash Sutradhar</span> 
                     <br>  </h1>
-                <p class="heading-1"> Electrical Engineer | Project Controls & Data Analytics | Python | Power BI  </p>
+                <p class="heading-1"> Electrical Engineer | Data Analytics | Python | Power BI | SQL  </p>
             </div>
         </div>
     </div>
@@ -72,7 +72,6 @@ deliver cost-effective engineering solutions. <br><br> Aspiring Data Analyst wit
                     <div class="tab-contants active-tab" id="skills">
                         <ul>
                             <li><span>🟡 Data Analytics & Programming</span><br>
-                                ✔ Electrical Engineering & Data Analysis <br>
                                 ✔ Programming Language: Java, Python, R, HTML/CSS, JS <br>
                                 ✔ SQL (MySQL, MongoDB, PostgreSQL)<br>
                                 ✔ Python (Pandas, Seaborn, NumPy, Matplotlib, SciPy, Time-Series)<br>
@@ -84,15 +83,13 @@ deliver cost-effective engineering solutions. <br><br> Aspiring Data Analyst wit
                                 ✔ Statistical Analysis & Forecasting <br>
                             </li>
                             <li><span>🟡 Electrical Engineering & Design</span><br>
-                                • Design & Drafting: AutoCAD, ETAP, Dialux, SolidWorks, SLD (Single Line Diagrams), Cable Sizing <br>
-                                • Systems: Electrical System Design (LV/MV), EHV/Substation Commissioning, Protection Studies, Load <br>
-                                Calculations, Testing & Commissioning, QA/QC & HSE Compliance (IEC, ISO, NEC, DEWA), Automation & Controls <br>
-                                • Automation: PLC/SCADA, Sensors, Actuators, VFDs, MATLAB.<br>
+                                • Design & Drafting: AutoCAD, ETAP, SLD (Single Line Diagrams), Cable Sizing <br>
+                                • Systems: Electrical System Design, Load Calculations, Testing & Commissioning, QA/QC & HSE Compliance (IEC, ISO, NEC, DEWA) <br>
+                                • Automation & Controls: PLC/SCADA, Sensors, Actuators, VFDs.<br>
                             </li>
                             <li><span>🟡 Project Management & Controls</span><br> 
-                                • Planning: Primavera P6, MS Project, SAP/ERP Systems, SharePoint. <br>
-                                • Commercial: Cost Control & Variance Analysis, BOQ (Bill of Quantities)/Cost Estimation, Variance Analysis, Vendor Management, 
-                                Project Documentation, Progress Reporting <br>
+                                • Planning: Primavera P6, MS Project, SAP/ERP, SharePoint. <br>
+                                • Commercial: Cost Control & Variance Analysis, BOQ (Bill of Quantities), Vendor Management, Project Documentation <br>
                                 • Execution: Site Coordination, Testing & Commissioning, MEP Coordination.<br>
                                 • Communication, Attention to Detail, Problem-solving, Stakeholder Management, Business Stratigy, Business Intelligence
                             </li>
@@ -121,11 +118,6 @@ deliver cost-effective engineering solutions. <br><br> Aspiring Data Analyst wit
                                 <br>Zidio Development Ltd | Bangalore<br>
                                 Jan 2023 – Mar 2023 <br>
                             </li>
-                            <li><span>Industrial Training</span>
-                                <br>Durgapur Projects Ltd<br>
-                                550Mw Steam Power Plant Unit-IV and A-B Zone Substation <br>
-                            </li>
-
                             <li><span></span><br></li>
                         </ul>
                     </div>
@@ -193,7 +185,7 @@ deliver cost-effective engineering solutions. <br><br> Aspiring Data Analyst wit
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>Engineering Design</h2>
+                    <h2>Graphics Design</h2>
                     <p>
                         Providing Design according business needed UI/UX, Ad, Flex, Printmedia, Banner etc.
                     </p>
@@ -201,7 +193,7 @@ deliver cost-effective engineering solutions. <br><br> Aspiring Data Analyst wit
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>Project Control</h2>
+                    <h2>Business Analysis</h2>
                     <p>
                         •••
                     </p>
