--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,7 +38,7 @@
             <div class="header-text">
                 <h1 class="heading-2">Hello! <span class="wave">👋🏼</span><br /> I'm <span>Tapash Sutradhar</span> 
                     <br>  </h1>
-                <p class="heading-1"> Electrical Engineer | Data Analytics | Python | Power BI | SQL  </p>
+                <p class="heading-1"> Software Developer & Data Analyst  </p>
             </div>
         </div>
     </div>
@@ -54,12 +54,9 @@
                     <h1 class="sub-title">About Me</h1>
                     <p>Hi! I’m Tapash,<br><br>
 
-                        Results-oriented experienced Electrical Engineer with specializing in Projects, Engineering Design, Project 
-Controls, Technical Data Analysis and Business Intelligence. Skilled in optimizing electrical systems using AutoCAD, 
-ETAP, Python, Power BI and Advanced Excel. Seeking to leverage strong technical design and analytical skills to 
-deliver cost-effective engineering solutions. <br><br> Aspiring Data Analyst with a strong engineering foundation and hands-on experience in Python, SQL, and BI tools.
-                        Skilled at analyzing and visualizing large datasets to deliver actionable insights that support data-driven business
-                        decisions. Eager to apply analytical, mathematical, and technical skills to solve real-world problems. <br><br><br>
+                        Software Engoneer and Data Analyst with a strong engineering foundation and hands-on experience in Java, Python, MERN Stack, SQL, and BI tools.
+                        Skilled at analyzing and visualizing large datasets wuse ML and AI to deliver actionable insights and build real world solution that support data-driven business
+                        decisions and Business problem. Eager to apply analytical, mathematical, and technical skills to solve real-world problems. <br><br><br>
 
                     </p>
                     <!------------------3 title section----------------------->
@@ -71,65 +68,60 @@ deliver cost-effective engineering solutions. <br><br> Aspiring Data Analyst wit
                     </div>
                     <div class="tab-contants active-tab" id="skills">
                         <ul>
-                            <li><span>🟡 Data Analytics & Programming</span><br>
-                                ✔ Programming Language: Java, Python, R, HTML/CSS, JS <br>
+                            <li><span>🟡 Programming</span><br>
+                                ✔ Python, Java (JDBC, Hibernate, Spring Boot, Spring MVC), HTML/CSS, JS, MERN Stack <br>
                                 ✔ SQL (MySQL, MongoDB, PostgreSQL)<br>
                                 ✔ Python (Pandas, Seaborn, NumPy, Matplotlib, SciPy, Time-Series)<br>
-                                ✔ Data Visualization: Power BI (DAX, Dashboards), Tableau (Story Points)<br>
-                                ✔ Advanced Excel (VLOOKUP, VBA, Macros, Power Pivot)<br>
-                                ✔ Tools: Jupyter Notebooks, Data Cleaning & Automation, DBT, ETL/ELT, Data Cleaning & Preparation, MS Office Suite (Word, Excel, PowerPoint), Data 
-                                    Analysis & Reporting<br>
+                            </li>
+                            <li><span>🟡 Data Analysis</span><br>
                                 ✔ Business Insights, Data storytelling & Reporting <br>
                                 ✔ Statistical Analysis & Forecasting <br>
+                                ✔ Jupyter Notebooks, Data Cleaning & Automation, DBT, ETL/ELT, Data Cleaning & Preparation <br>
+                                ✔ MS Office Suite (Word, Excel, PowerPoint) <br>
+                                ✔ Advanced Excel (VLOOKUP, VBA, Macros, Power Pivot)<br>
+                                ✔ Data insights & Reporting<br>
+                                ✔ Data Visualization: Power BI (DAX, Dashboards), Tableau (Story Points)<br>
+                                ✔ Microsoft Azure <br>
                             </li>
-                            <li><span>🟡 Electrical Engineering & Design</span><br>
-                                • Design & Drafting: AutoCAD, ETAP, SLD (Single Line Diagrams), Cable Sizing <br>
-                                • Systems: Electrical System Design, Load Calculations, Testing & Commissioning, QA/QC & HSE Compliance (IEC, ISO, NEC, DEWA) <br>
-                                • Automation & Controls: PLC/SCADA, Sensors, Actuators, VFDs.<br>
-                            </li>
-                            <li><span>🟡 Project Management & Controls</span><br> 
-                                • Planning: Primavera P6, MS Project, SAP/ERP, SharePoint. <br>
-                                • Commercial: Cost Control & Variance Analysis, BOQ (Bill of Quantities), Vendor Management, Project Documentation <br>
-                                • Execution: Site Coordination, Testing & Commissioning, MEP Coordination.<br>
-                                • Communication, Attention to Detail, Problem-solving, Stakeholder Management, Business Stratigy, Business Intelligence
+                            <li><span>🟡 Soft Skills</span><br>
+                                • MS Project, SharePoint, Jira, Notion. <br>
+                                • SDLC, Waterfall & Agile Methodology, SCRAM <br>
+                                • Communication, Attention to Detail, Problem-solving, Business Intelligence
                             </li>
                         </ul>
                     </div>
                     <div class="tab-contants" id="experience">
                         <ul>
-                            <li><span>Electrical Engineer (Projects & Grid Analytics) </span>
+                            <li><span>GET . Grid Data Analytics) </span>
                                 <br>WBSETCL<br>
                                 July 2024 – Present <br>
                             </li>
-                            <li><span>Executive Electrical Engineer </span>
+                            <li><span>Executive Engineer </span>
                                 <br>Synnat Pharma Pvt Ltd | Visakhapatnam, India<br>
-                                Mar 2023 – May 2024 <br>
+                                Mar 2024 – May 2024 <br>
                             </li>
-                            <li><span>Junior Electrical Engineer</span>
-                                <br>ABCI Infrastructures Pvt. Ltd. | Assam, India<br>
-                                Feb 2020 – Jan 2023 <br>
-                            </li>
-••• Intern and Training •••
-                            <li><span>Data Analyst (Intern - Remote)</span>
+                            <li><span>Data Analyst (Intern)</span>
                                 <br>InnoByte Services | New Delhi<br>
                                 May 2024 – July 2024 <br>
                             </li>
-                            <li><span>Software developer and Data Analyst (Intern)</span>
+                            <li><span>Software developer (Intern)</span>
                                 <br>Zidio Development Ltd | Bangalore<br>
-                                Jan 2023 – Mar 2023 <br>
+                                Oct 2023 – Apr 2024 <br>
                             </li>
                             <li><span></span><br></li>
                         </ul>
                     </div>
                     <div class="tab-contants" id="education">
                         <ul>
+                            <li><span> Data Analysis and Artificial Intelligence ~ 2024</span><br>
+                                BIA<br>
+                                Associate Degree<br></li>
                             <li><span>Bachelor's Degree in Engineering and Technology ~ 2023</span><br>
                                 Bengal Institute of Technology and Management (BITM),India<br>
-                                Bachelor of Technology in Electrical Engineering<br>
+                                Bachelor of Technology<br>
                                 CGPA 9.17/10 <br></li>
                             <li><span>Diploma in Engineering ~ 2019</span><br>
-                                Nibedita Polytechnic,India<br>
-                                Diploma of Technology in Electrical Engineering<br>
+                                Diploma in Engineering Technology<br>
                                 CGPA 8.50/10 <br></li>
                         </ul>
                     </div>
@@ -177,7 +169,7 @@ deliver cost-effective engineering solutions. <br><br> Aspiring Data Analyst wit
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
-                    <h2>Project Management</h2>
+                    <h2>Software Development</h2>
                     <p>
                         Offering innovative engineering solutions with a focus on technical design, system optimization, and project development.
                     </p>
